--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <body>
     <header>
       <div class="left-section">
-            <a href="Restauranpage1homepage.html"
+            <a href="index.html"
               ><img class="logo-res" src="logo-vipAA.svg"
             /></a>
       </div>
       <div class="right-section">
-        <div><a href="Restauranpage1homepage.html" style="color: black;text-decoration: none;">HOME</a></div>
+        <div><a href="index.html" style="color: black;text-decoration: none;">HOME</a></div>
         <div><a href="Restautrantpage2aboutus.html" style="color: black;text-decoration: none;">OUR STORY</a></div>
         <div><a href="restautantpage3menu.html" style="color: black;text-decoration: none;" >MENU</a></div>
         <div><a href="what-on.html" style="color: black;text-decoration: none;" >WHAT'S ON</a></div>
