--- a/retaurantpage6reservation.html
+++ b/retaurantpage6reservation.html
@@ -32,7 +32,7 @@
       <div class="right-section">
         <div>
           <a
-            href="Restauranpage1homepage.html"
+            href="index.html"
             style="color: black; text-decoration: none"
             >HOME</a
           >
