--- a/retaurantpage6reservation.html
+++ b/retaurantpage6reservation.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <div class="left-section">
-        <a href="index.html"
+        <a href=""
           ><img class="logo-res" src="logo-vipAA.svg"
         /></a>
       </div>
